# odio-edit

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md
data/: CMakeLists.txt  odio-edit.desktop.in
data/usr/share/applications/: odio-edit.desktop
data/usr/share/glib-2.0/schemas/: in.tari.odio-edit.gschema.xml
debian/: changelog  control  copyright  rules  watch
po/: CMakeLists.txt  ca.po  de.po  es.po  fr.po  it.po  nb_NO.po  odio-edit.pot  odio-edit.pot.~1~  pl.po  ru.po  si.po  sv.po  ta.po  tr.po  zh_CN.po
src/: CMakeLists.txt  chunk.c  chunk.h  chunkview.c  chunkview.h  datasource.c  datasource.h  document.c  document.h  file.c  file.h  gstreamer.c  gstreamer.h  main.c  main.h  mainwindow.c  mainwindow.h  message.c  message.h  player.c  player.h  ringbuf.c  ringbuf.h  tempfile.c  tempfile.h  viewcache.c  viewcache.h
